[workspace]
members = ["crates/http", "crates/web", "crates/bencher"]
resolver = "3"

# see: https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace.package]
authors = ["Zava <zava.kid@gmail.com>"]
edition = "2024"
homepage = "https://github.com/foldright/micro-http"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foldright/micro-http"
rust-version = "1.90"
version = "0.2.0"

[workspace.dependencies]
http = "1.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
faf-http-date = "0.1"
mime = "0.3.17"

httparse = "1.10.1"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.16", features = ["codec", "io", "tracing"] }
async-trait = "0.1.89"
futures = "0.3.31"
bytes = "1.10.1"
pin-project-lite = "0.2.16"

dynosaur = "0.3"
trait-variant = "0.1"

hlist2 = "0.0.15"
tower-layer = "0.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.143"
serde_qs = "0.15"

flate2 = "1.1.2"
zstd = "0.13.3"
brotli = "8.0.2"

thiserror = "2"

arc-swap = "1.7.1"
once_cell = "1.21.3"


matchit = "0.8.6"

mockall = "0.13.1"
criterion = "0.7"

codspeed-criterion-compat = { version = "3.0.5", default-features = false }

dhat = "0.3"

micro-web = { path = "crates/web", version = "0.2.0" }
micro-http = { path = "crates/http", version = "0.2.0" }

[profile.dev.build-override]
debug = true
[profile.release.build-override]
debug = true
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true
