[workspace]
members = ["crates/http", "crates/web", "crates/bencher"]
resolver = "3"

# see: https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace.package]
authors = ["Zava <zava.kid@gmail.com>"]
edition = "2024"
homepage = "https://github.com/foldright/micro-http"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foldright/micro-http"
rust-version = "1.90"
version = "0.2.2"

[workspace.dependencies]
http = "1"
http-body = "1.0"
http-body-util = "0.1"
faf-http-date = "0.1"
mime = "0.3"

httparse = "1.10"

tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "io", "tracing"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.10"
pin-project-lite = "0.2"

dynosaur = "0.3"
trait-variant = "0.1"

hlist2 = "0.0.15"
tower-layer = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
serde_qs = "0.15"

flate2 = "1.1"
zstd = "0.13"
brotli = "8.0"

thiserror = "2"

arc-swap = "1.7"
once_cell = "1.21"


matchit = "0.8"

mockall = "0.13"
criterion = "0.7"

codspeed-criterion-compat = { version = "3.0", default-features = false }

dhat = "0.3"

micro-web = { path = "crates/web", version = "0.2.2" }
micro-http = { path = "crates/http", version = "0.2.2" }

[profile.dev.build-override]
debug = true
[profile.release.build-override]
debug = true
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true
