[workspace]
members = ["crates/http", "crates/web", "crates/bencher"]
resolver = "3"

# see: https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace.package]
authors = ["Zava <zava.kid@gmail.com>"]
edition = "2024"
homepage = "https://github.com/foldright/micro-http"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foldright/micro-http"
rust-version = "1.90"
version = "0.3.0"

[workspace.dependencies]
http = "1"
http-body = "1.0"
http-body-util = "0.1"
faf-http-date = "0.1"
mime = "0.3"

httparse = "1.10"

tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "io", "tracing"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.10"
pin-project-lite = "0.2"

dynosaur = "0.3"
trait-variant = "0.1"

hlist2 = "0.0.15"
tower-layer = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
serde_qs = "0.15"

flate2 = "1.1"
zstd = "0.13"
brotli = "8.0"

thiserror = "2"

arc-swap = "1.7"
once_cell = "1.21"
triomphe = "0.1"


matchit = "0.8"

mockall = "0.13"
criterion = "0.7"

codspeed-criterion-compat = { version = "3.0", default-features = false }

dhat = "0.3"

micro-web = { path = "crates/web", version = "0.3.0" }
micro-http = { path = "crates/http", version = "0.3.0" }




[profile.dev.build-override]
debug = true
[profile.release.build-override]
debug = true
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"


[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }  # optional, might cause more false positives

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
