[package]
name = "micro-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["http", "async", "web"]
categories = ["web-programming::http-server", "network-programming"]
description = "the async micro http server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
mime.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

bytes.workspace = true
tokio.workspace = true
tokio-util = {workspace = true, features = ["tracing"]}
futures.workspace = true
trait-variant.workspace = true

thiserror.workspace = true
triomphe.workspace = true

[dev-dependencies]
indoc = "2.0.5"
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }


[[bench]]
name = "http_bench"
harness = false

[lints]
workspace = true
