[package]
name = "micro-web"
version = "0.1.0-alpha.2"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
keywords = ["http", "async", "web"]
categories = ["web-programming::http-server", "network-programming"]
description = "the async micro web framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro-http = "0.1.0-alpha.2"

http = "0.2.9"
http-body = "1.0.0-rc.2"
http-body-util = "0.1.0-rc.2"
mime = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.95"

bytes = "1.3.0"

futures = "0.3.26"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "signal", "test-util"] }
async-trait = "0.1.68"

matchit = "0.7.0"

thiserror = "1"

[dev-dependencies]
mockall = "0.11.3"
