[package]
name = "micro-web"
version = "0.1.0-alpha.4"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
keywords = ["http", "async", "web"]
categories = ["web-programming::http-server", "network-programming"]
description = "the async micro web framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro-http = "0.1.0-alpha.4"
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
mime.workspace = true
httpdate.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
serde_json.workspace = true
serde_qs.workspace = true

# compress lib, maybe we need to set as feature optional dependency:
flate2.workspace = true
zstd.workspace = true
brotli.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

bytes.workspace = true


pin-project-lite.workspace = true

tokio = { workspace = true, features = ["time"] }
futures.workspace = true
async-trait.workspace = true
arc-swap.workspace = true

matchit.workspace = true

thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true
